--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 
- html {
+/*  html {
   box-sizing: border-box;
   margin:0 0;
   display: flex;
@@ -7,16 +7,37 @@
   text-align: center;
   justify-content: center;
   height: 100vh;
- }
+ } */
  *, *:before, *:after {
   box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 }
 body {
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   margin: 0;
 }
+.main {
+  width: 100%;
+  height: 100vh;
+}
 
+video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
+}
  .App {
   /* background-color: rgb(242, 0, 255); */
   display: flex;
